syntax = "proto3";
package protobuf;
option java_package = "com.fiture.recording.room.event.proto";
option java_outer_classname = "CollectiveChallengeProgressEventProto";

message CollectiveChallengeProgressEvent {
  int32 count = 1;
  string encourage = 2;
}