syntax = "proto3";
package protobuf;
option java_package = "com.fiture.recording.room.event.proto";
option java_outer_classname = "CollectiveChallengeSummaryEventProto";

message CollectiveChallengeSummaryEvent {
  int32 challengeTarget = 1;
  int32 count = 2;
  string encourage = 3;
  repeated CollectiveRankUser rankUsers = 4;
  repeated CollectiveUserBasicInfo users = 5;
}

message CollectiveRankUser {
  int64 accountId = 1;
  int32 position = 2;
  string username = 3;
  string avatar = 4;
  string gender = 5;
  string location = 6;
  int32 count = 7;
}

message CollectiveUserBasicInfo {
  int64 accountId = 1;
  int32 count = 2;
}