syntax = "proto3";
package protobuf;
option java_package = "com.fiture.recording.room.event.proto";
option java_outer_classname = "HostReportSkeletonEventProto";

message HostReportSkeletonEvent {
  // 开启的命令序号
  int64 reportCommandId = 1;
  repeated int64 accountIds = 2;
}