syntax = "proto3";
package protobuf;
option java_package = "com.fiture.recording.room.event.proto";
option java_outer_classname = "CollectiveChallengePlayerDataEventProto";

message CollectiveChallengePlayerDataEvent {
  int64 roomId = 1;
  int64 roomItemId = 2;
  int64 accountId = 3;
  int32 score = 4;
  string unit = 5;
  int64 currentTimestamp = 6;
  double speed = 7;
  bool serverTransfer = 8;
}